--- a/timesburg/go/assets/css/core.css
+++ b/timesburg/go/assets/css/core.css
@@ -33,6 +33,26 @@ img {
   transform: translateZ(0);
   will-change: filter;
 }
+
+
+.footer{
+  display: flex; 
+  position: fixed; 
+  bottom: 0; 
+  left: 0; 
+  z-index: 10; 
+  padding-top: 1rem;
+  padding-bottom: 1rem; 
+  padding-left: 1rem;
+  padding-right: 1rem; 
+  justify-content: space-between; 
+  align-items: flex-end; 
+  width: 100%; 
+  pointer-events: none; 
+  opacity: 1; 
+  padding-bottom: max(1rem,env(safe-area-inset-bottom));
+}
+
 .footer-pill {
   background: #333;
   border-radius: 9999px;
@@ -53,6 +73,15 @@ img {
   
   font-family: monospace;
   letter-spacing: 0.05em;
+}
+@media (orientation:portrait) {
+  .footer-pill-text{
+    font-size: .45rem;
+    padding-left: .2rem;
+  }
+  .footer-pill-btn{
+    padding: .5rem .5rem;
+  }
 }
 
 .footer-pill-btn {
