--- a/timesburg/go/assets/css/tw.css
+++ b/timesburg/go/assets/css/tw.css
@@ -1,652 +1,1 @@
-.pointer-events-none {
-    pointer-events: none
-}
-
-.pointer-events-auto {
-    pointer-events: auto
-}
-
-.fixed {
-    position: fixed
-}
-
-.absolute {
-    position: absolute
-}
-
-.relative {
-    position: relative
-}
-
-.inset-0 {
-    inset: 0
-}
-
-.bottom-0 {
-    bottom: 0
-}
-
-.left-0 {
-    left: 0
-}
-
-.left-6 {
-    left: 1.5rem
-}
-
-.top-0 {
-    top: 0
-}
-
-.top-1\/2 {
-    top: 50%
-}
-
-.z-10 {
-    z-index: 10
-}
-
-.z-50 {
-    z-index: 50
-}
-
-.mb-0{
-    margin-bottom: 0;
-}
-
-.mb-0\.5 {
-    margin-bottom: .125rem
-}
-
-.mb-1 {
-    margin-bottom: .25rem
-}
-
-.mb-12 {
-    margin-bottom: 3rem
-}
-
-.mt-0 {
-    margin-top: 0
-}
-
-.flex {
-    display: flex
-}
-
-.hidden {
-    display: none
-}
-
-.aspect-square {
-    aspect-ratio: 1/1
-}
-
-.h-1 {
-    height: .25rem
-}
-
-.h-14 {
-    height: 3.5rem
-}
-
-.h-24 {
-    height: 6rem
-}
-
-.h-\[90vmin\] {
-    height: 90vmin
-}
-
-.h-full {
-    height: 100%
-}
-
-.h-screen {
-    height: 100vh
-}
-
-.max-h-\[85vh\] {
-    max-height: 85vh
-}
-
-.w-1 {
-    width: .25rem
-}
-
-.w-12 {
-    width: 3rem
-}
-
-.w-14 {
-    width: 3.5rem
-}
-
-.w-24 {
-    width: 6rem
-}
-
-.w-\[78vmin\] {
-    width: 78vmin
-}
-
-.w-\[82vmin\] {
-    width: 82vmin
-}
-
-.w-\[90vmin\] {
-    width: 90vmin
-}
-
-.w-full {
-    width: 100%
-}
-
-.w-screen {
-    width: 100vw
-}
-
-.max-w-\[320px\] {
-    max-width: 320px
-}
-
-.max-w-\[340px\] {
-    max-width: 340px
-}
-
-.max-w-\[420px\] {
-    max-width: 420px
-}
-
-.max-w-\[460px\] {
-    max-width: 460px
-}
-
-.flex-shrink-0 {
-    flex-shrink: 0
-}
-
-.-translate-y-1\/2 {
-    --tw-translate-y: -50%
-}
-
-.-translate-y-1\/2, .transform {
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
-}
-
-.cursor-grab {
-    cursor: grab
-}
-
-.flex-col {
-    flex-direction: column
-}
-
-.items-start {
-    align-items: flex-start
-}
-
-.items-end {
-    align-items: flex-end
-}
-
-.items-center {
-    align-items: center
-}
-
-.justify-center {
-    justify-content: center
-}
-
-.justify-between {
-    justify-content: space-between
-}
-
-.gap-1 {
-    gap: .25rem
-}
-
-.gap-2 {
-    gap: .5rem
-}
-
-.gap-4 {
-    gap: 1rem
-}
-
-.overflow-hidden {
-    overflow: hidden
-}
-
-.overflow-y-auto {
-    overflow-y: auto
-}
-
-.rounded-2xl {
-    border-radius: 1rem
-}
-
-.rounded-\[26px\] {
-    border-radius: 26px
-}
-
-.rounded-\[35px\] {
-    border-radius: 35px
-}
-
-.rounded-full {
-    border-radius: 9999px
-}
-
-.rounded-xl {
-    border-radius: .75rem
-}
-
-.border {
-    border-width: 1px
-}
-
-.border-\[\#00d681\]\/30 {
-    border-color: rgba(0, 214, 129, .3)
-}
-
-.border-\[\#00d681\]\/80 {
-    border-color: rgba(0, 214, 129, .8)
-}
-
-.border-white\/10 {
-    border-color: hsla(0, 0%, 100%, .1)
-}
-
-.border-white\/40 {
-    border-color: hsla(0, 0%, 100%, .4)
-}
-
-.bg-\[\#327D5F\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(50 125 95/var(--tw-bg-opacity, 1))
-}
-
-.bg-black\/60 {
-    background-color: rgba(0, 0, 0, .6)
-}
-
-.bg-black\/70 {
-    background-color: rgba(0, 0, 0, .7)
-}
-
-.bg-green-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(34 197 94/var(--tw-bg-opacity, 1))
-}
-
-.bg-primary\/35 {
-    background-color: rgba(0, 214, 129, .35)
-}
-
-.bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255/var(--tw-bg-opacity, 1))
-}
-
-.bg-white\/15 {
-    background-color: hsla(0, 0%, 100%, .15)
-}
-
-.object-contain {
-    -o-object-fit: contain;
-    object-fit: contain
-}
-
-.object-cover {
-    -o-object-fit: cover;
-    object-fit: cover
-}
-
-.p-0 {
-    padding: 0
-}
-
-.p-1 {
-    padding: .25rem
-}
-
-.p-2 {
-    padding: .5rem
-}
-
-.p-3 {
-    padding: .75rem
-}
-
-.p-4 {
-    padding: 1rem
-}
-
-.px-2 {
-    padding-left: .5rem;
-    padding-right: .5rem
-}
-
-.px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem
-}
-
-.px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem
-}
-
-.py-1\.5 {
-    padding-top: .375rem;
-    padding-bottom: .375rem
-}
-
-.py-2 {
-    padding-top: .5rem;
-    padding-bottom: .5rem
-}
-
-.py-2\.5 {
-    padding-top: .75rem;
-    padding-bottom: .75rem
-}
-
-.py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem
-}
-
-.pb-\[max\(1rem\2c env\(safe-area-inset-bottom\)\)\] {
-    padding-bottom: max(1rem, env(safe-area-inset-bottom))
-}
-
-.text-left {
-    text-align: left
-}
-
-.text-center {
-    text-align: center
-}
-
-.font-display {
-    font-family: Epilogue, sans-serif
-}
-
-.font-mono {
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace
-}
-
-.text-\[10px\] {
-    font-size: 10px
-}
-
-.text-\[16px\] {
-    font-size: 16px
-}
-
-.text-\[9px\] {
-    font-size: 9px
-}
-
-.text-base {
-    font-size: 1rem;
-    line-height: 1.5rem
-}
-
-.text-sm {
-    font-size: .875rem;
-    line-height: 1.25rem
-}
-
-.text-xs {
-    font-size: .75rem;
-    line-height: 1rem
-}
-
-.font-medium {
-    font-weight: 500
-}
-
-.font-semibold {
-    font-weight: 600
-}
-
-.uppercase {
-    text-transform: uppercase
-}
-
-.leading-snug {
-    line-height: 1.375
-}
-
-.leading-tight {
-    line-height: 1.25
-}
-
-.tracking-wide {
-    letter-spacing: .025em
-}
-
-.tracking-wider {
-    letter-spacing: .05em
-}
-
-.tracking-widest {
-    letter-spacing: .1em
-}
-
-.text-\[\#00d681\]\/90 {
-    color: rgba(0, 214, 129, .9)
-}
-
-.text-black {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0/var(--tw-text-opacity, 1))
-}
-
-.text-primary {
-    --tw-text-opacity: 1;
-    color: rgb(0 214 129/var(--tw-text-opacity, 1))
-}
-
-.text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255/var(--tw-text-opacity, 1))
-}
-
-.text-white\/40 {
-    color: hsla(0, 0%, 100%, .4)
-}
-
-.text-white\/50 {
-    color: hsla(0, 0%, 100%, .5)
-}
-
-.text-white\/70 {
-    color: hsla(0, 0%, 100%, .7)
-}
-
-.text-white\/90 {
-    color: hsla(0, 0%, 100%, .9)
-}
-
-.opacity-0 {
-    opacity: 0
-}
-
-.opacity-100 {
-    opacity: 1
-}
-
-.shadow-\[0_15px_35px_rgba\(0\2c 0\2c 0\2c 0\.4\)\] {
-    --tw-shadow: 0 15px 35px rgba(0, 0, 0, .4);
-    --tw-shadow-colored: 0 15px 35px var(--tw-shadow-color)
-}
-
-.shadow-\[0_15px_35px_rgba\(0\2c 0\2c 0\2c 0\.4\)\], .shadow-sm {
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
-}
-
-.shadow-sm {
-    --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
-    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color)
-}
-
-.blur-\[140px\] {
-    --tw-blur: blur(140px)
-}
-
-.blur-\[140px\], .brightness-\[1\.2\] {
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
-}
-
-.brightness-\[1\.2\] {
-    --tw-brightness: brightness(1.2)
-}
-
-.contrast-\[1\.3\] {
-    --tw-contrast: contrast(1.3)
-}
-
-.contrast-\[1\.3\], .drop-shadow-md {
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
-}
-
-.drop-shadow-md {
-    --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, .07)) drop-shadow(0 2px 2px rgba(0, 0, 0, .06))
-}
-
-.hue-rotate-\[180deg\] {
-    --tw-hue-rotate: hue-rotate(180deg)
-}
-
-.hue-rotate-\[180deg\], .saturate-\[\.8\] {
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
-}
-
-.saturate-\[\.8\] {
-    --tw-saturate: saturate(.8)
-}
-
-.filter {
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
-}
-
-.backdrop-blur-\[18px\] {
-    --tw-backdrop-blur: blur(18px)
-}
-
-.backdrop-blur-\[18px\], .backdrop-blur-xl {
-    backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)
-}
-
-.backdrop-blur-xl {
-    --tw-backdrop-blur: blur(24px)
-}
-
-.transition {
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-    transition-duration: .15s
-}
-
-.transition-colors {
-    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-    transition-duration: .15s
-}
-
-.transition-opacity {
-    transition-property: opacity;
-    transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-    transition-duration: .15s
-}
-
-.duration-200 {
-    transition-duration: .2s
-}
-
-.duration-300 {
-    transition-duration: .3s
-}
-
-.duration-\[800ms\] {
-    transition-duration: .8s
-}
-
-.ease-in-out {
-    transition-timing-function: cubic-bezier(.4, 0, .2, 1)
-}
-
-.hover\:bg-\[\#00b078\]:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 176 120/var(--tw-bg-opacity, 1))
-}
-
-.hover\:bg-\[\#00d681\]\/25:hover {
-    background-color: rgba(0, 214, 129, .25)
-}
-
-.hover\:bg-gray-100:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(243 244 246/var(--tw-bg-opacity, 1))
-}
-
-.active\:cursor-grabbing:active {
-    cursor: grabbing
-}
-
-.group:hover .group-hover\:text-primary {
-    --tw-text-opacity: 1;
-    color: rgb(0 214 129/var(--tw-text-opacity, 1))
-}
-
-@media (min-width:640px) {
-    .sm\:h-16 {
-        height: 4rem
-    }
-
-    .sm\:w-16 {
-        width: 4rem
-    }
-
-    .sm\:w-32 {
-        width: 8rem
-    }
-
-    .sm\:flex-row {
-        flex-direction: row
-    }
-
-    .sm\:gap-3 {
-        gap: .75rem
-    }
-
-    .sm\:p-4 {
-        padding: 1rem
-    }
-
-    .sm\:text-base {
-        font-size: 1rem;
-        line-height: 1.5rem
-    }
-
-    .sm\:text-xs {
-        font-size: .75rem;
-        line-height: 1rem
-    }
-}
-
-@media (min-width:768px) {
-    .md\:flex-col {
-        flex-direction: column
-    }
-}
-
-@media (min-width:1024px) {
-    .lg\:flex-row {
-        flex-direction: row
-    }
-}
+.pointer-events-none{pointer-events:none}.fixed{position:fixed}.absolute{position:absolute}.relative{position:relative}.inset-0{inset:0}.bottom-0{bottom:0}.left-0{left:0}.left-6{left:1.5rem}.top-0{top:0}.top-1\/2{top:50%}.z-10{z-index:10}.z-50{z-index:50}.mb-0{margin-bottom:0}.mb-0\.5{margin-bottom:.125rem}.mb-1{margin-bottom:.25rem}.mb-12{margin-bottom:3rem}.mt-0{margin-top:0}.flex{display:flex}.hidden{display:none}.aspect-square{aspect-ratio:1/1}.h-1{height:.25rem}.h-14{height:3.5rem}.h-24{height:6rem}.h-full{height:100%}.h-screen{height:100vh}.max-h-\[85vh\]{max-height:85vh}.w-1{width:.25rem}.w-12{width:3rem}.w-14{width:3.5rem}.w-24{width:6rem}.w-\[78vmin\]{width:78vmin}.w-\[82vmin\]{width:82vmin}.w-full{width:100%}.w-screen{width:100vw}.max-w-\[320px\]{max-width:320px}.max-w-\[340px\]{max-width:340px}.max-w-\[420px\]{max-width:420px}.max-w-\[460px\]{max-width:460px}.flex-shrink-0{flex-shrink:0}.-translate-y-1\/2{--tw-translate-y:-50%}.-translate-y-1\/2,.transform{transform:translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}.cursor-grab{cursor:grab}.flex-col{flex-direction:column}.items-start{align-items:flex-start}.items-end{align-items:flex-end}.items-center{align-items:center}.justify-center{justify-content:center}.justify-between{justify-content:space-between}.gap-1{gap:.25rem}.gap-2{gap:.5rem}.gap-4{gap:1rem}.overflow-hidden{overflow:hidden}.overflow-y-auto{overflow-y:auto}.rounded-2xl{border-radius:1rem}.rounded-\[26px\]{border-radius:26px}.rounded-\[35px\]{border-radius:35px}.rounded-full{border-radius:9999px}.rounded-xl{border-radius:.75rem}.border{border-width:1px}.border-\[\#00d681\]\/30{border-color:rgba(0,214,129,.3)}.border-\[\#00d681\]\/80{border-color:rgba(0,214,129,.8)}.border-white\/10{border-color:hsla(0,0%,100%,.1)}.bg-\[\#327D5F\]{--tw-bg-opacity:1;background-color:rgb(50 125 95/var(--tw-bg-opacity,1))}.bg-black\/60{background-color:rgba(0,0,0,.6)}.bg-black\/70{background-color:rgba(0,0,0,.7)}.bg-green-500{--tw-bg-opacity:1;background-color:rgb(34 197 94/var(--tw-bg-opacity,1))}.bg-white{--tw-bg-opacity:1;background-color:rgb(255 255 255/var(--tw-bg-opacity,1))}.bg-white\/15{background-color:hsla(0,0%,100%,.15)}.object-contain{-o-object-fit:contain;object-fit:contain}.object-cover{-o-object-fit:cover;object-fit:cover}.p-0{padding:0}.p-1{padding:.25rem}.p-2{padding:.5rem}.p-3{padding:.75rem}.p-4{padding:1rem}.px-2{padding-left:.5rem;padding-right:.5rem}.px-4{padding-left:1rem;padding-right:1rem}.py-2{padding-top:.5rem;padding-bottom:.5rem}.py-4{padding-top:1rem;padding-bottom:1rem}.pb-\[max\(1rem\2c env\(safe-area-inset-bottom\)\)\]{padding-bottom:max(1rem,env(safe-area-inset-bottom))}.text-left{text-align:left}.text-center{text-align:center}.font-display{font-family:Epilogue,sans-serif}.font-mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace}.text-\[10px\]{font-size:10px}.text-\[9px\]{font-size:9px}.text-base{font-size:1rem;line-height:1.5rem}.text-sm{font-size:.875rem;line-height:1.25rem}.text-xs{font-size:.75rem;line-height:1rem}.font-medium{font-weight:500}.font-semibold{font-weight:600}.uppercase{text-transform:uppercase}.leading-snug{line-height:1.375}.leading-tight{line-height:1.25}.tracking-wide{letter-spacing:.025em}.tracking-wider{letter-spacing:.05em}.tracking-widest{letter-spacing:.1em}.text-\[\#00d681\]\/90{color:rgba(0,214,129,.9)}.text-black{--tw-text-opacity:1;color:rgb(0 0 0/var(--tw-text-opacity,1))}.text-primary{--tw-text-opacity:1;color:rgb(0 214 129/var(--tw-text-opacity,1))}.text-white{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity,1))}.text-white\/40{color:hsla(0,0%,100%,.4)}.text-white\/50{color:hsla(0,0%,100%,.5)}.text-white\/70{color:hsla(0,0%,100%,.7)}.text-white\/90{color:hsla(0,0%,100%,.9)}.opacity-0{opacity:0}.opacity-100{opacity:1}.shadow-\[0_15px_35px_rgba\(0\2c 0\2c 0\2c 0\.4\)\]{--tw-shadow:0 15px 35px rgba(0,0,0,.4);--tw-shadow-colored:0 15px 35px var(--tw-shadow-color)}.shadow-\[0_15px_35px_rgba\(0\2c 0\2c 0\2c 0\.4\)\],.shadow-sm{box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)}.shadow-sm{--tw-shadow:0 1px 2px 0 rgba(0,0,0,.05);--tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color)}.brightness-\[1\.2\]{--tw-brightness:brightness(1.2)}.brightness-\[1\.2\],.contrast-\[1\.3\]{filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)}.contrast-\[1\.3\]{--tw-contrast:contrast(1.3)}.drop-shadow-md{--tw-drop-shadow:drop-shadow(0 4px 3px rgba(0,0,0,.07)) drop-shadow(0 2px 2px rgba(0,0,0,.06))}.drop-shadow-md,.hue-rotate-\[180deg\]{filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)}.hue-rotate-\[180deg\]{--tw-hue-rotate:hue-rotate(180deg)}.saturate-\[\.8\]{--tw-saturate:saturate(.8)}.filter,.saturate-\[\.8\]{filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)}.backdrop-blur-\[18px\]{--tw-backdrop-blur:blur(18px)}.backdrop-blur-\[18px\],.backdrop-blur-xl{backdrop-filter:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)}.backdrop-blur-xl{--tw-backdrop-blur:blur(24px)}.transition{transition-property:color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;transition-timing-function:cubic-bezier(.4,0,.2,1);transition-duration:.15s}.transition-colors{transition-property:color,background-color,border-color,text-decoration-color,fill,stroke;transition-timing-function:cubic-bezier(.4,0,.2,1);transition-duration:.15s}.transition-opacity{transition-property:opacity;transition-timing-function:cubic-bezier(.4,0,.2,1);transition-duration:.15s}.duration-200{transition-duration:.2s}.duration-300{transition-duration:.3s}.duration-\[800ms\]{transition-duration:.8s}.ease-in-out{transition-timing-function:cubic-bezier(.4,0,.2,1)}.hover\:bg-\[\#00b078\]:hover{--tw-bg-opacity:1;background-color:rgb(0 176 120/var(--tw-bg-opacity,1))}.hover\:bg-\[\#00d681\]\/25:hover{background-color:rgba(0,214,129,.25)}.hover\:bg-gray-100:hover{--tw-bg-opacity:1;background-color:rgb(243 244 246/var(--tw-bg-opacity,1))}.active\:cursor-grabbing:active{cursor:grabbing}.group:hover .group-hover\:text-primary{--tw-text-opacity:1;color:rgb(0 214 129/var(--tw-text-opacity,1))}@media (min-width:640px){.sm\:h-16{height:4rem}.sm\:w-16{width:4rem}.sm\:w-32{width:8rem}.sm\:flex-row{flex-direction:row}.sm\:gap-3{gap:.75rem}.sm\:p-4{padding:1rem}.sm\:text-base{font-size:1rem;line-height:1.5rem}.sm\:text-xs{font-size:.75rem;line-height:1rem}}@media (min-width:768px){.md\:flex-col{flex-direction:column}}@media (min-width:1024px){.lg\:flex-row{flex-direction:row}}
