--- a/timesburg/go/assets/css/core.css
+++ b/timesburg/go/assets/css/core.css
@@ -61,7 +61,7 @@ img {
   /* padding: 0.25rem 0.25rem; */
   display: flex;
   align-items: center;
-  gap: 0.75rem;
+  gap: 0.25rem;
   pointer-events: auto;
   box-shadow: inset 0 0 0 .02rem rgba(255, 255, 255, 0.3);
 }
@@ -82,12 +82,15 @@ img {
   .footer-pill-btn{
     padding: .5rem .5rem;
   }
+  #buy-info{
+    display: none;
+  }
 }
 
 .footer-pill-btn {
   background: #f1f1f1;
   color: black;
-  font-size: .9rem;
+  font-size: .85rem;
   font-weight: 500;
   padding: .6rem 1rem;
   /* padding: 0.6rem 1rem; */
