--- a/timesburg/go/assets/css/core.css
+++ b/timesburg/go/assets/css/core.css
@@ -14,6 +14,8 @@ html, body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  touch-action: manipulation;
+  touch-action: none;
 }
 img {
   -webkit-user-drag: none;
@@ -756,9 +758,10 @@ img {
 
 /* =========================
    BUY INFO
-========================= */
-.image-selector,
-#image-selector {
+========================= */ /* .image-selector,
+#image-selector */
+.switcher,
+#switcher {
   opacity: 0;
   pointer-events: none;
   transition: opacity .6s ease-in-out;
